[package]
name = "xnt-core-cli"
description = "cli client for interfacing with xnt-core"
authors = ["Triton Software"]

version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

homepage = ""
repository = "https://github.com/neptuneprivacy/xnt-core/"

default-run = "xnt-cli"

[[bin]]
name = "xnt-cli"
path = "src/main.rs"

[dependencies]

neptune-privacy = { version = "0.2.0", path = "../xnt-core" }
anyhow = { version = "1.0" }
tiny-bip39 = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
itertools = "0.11"
rand = "0.9"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tarpc = { version = "^0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio = { version = "1.41", features = ["full", "tracing"] }
bech32 = ">=0.9, <0.10"

[dev-dependencies]
arbitrary = "1.4.2"
test-strategy = "0.4.3"
proptest = "1.7.0"
proptest-arbitrary-interop = "0.1.0"

[lints]
workspace = true
