[package]
name = "xnt-dashboard"
description = "neptune-privacy tui dashboard and wallet"
authors = ["Triton Software"]

version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

homepage = ""
repository = "https://github.com/neptuneprivacy/xnt-core/"

[features]
default = []
mock = ["rand", "neptune-privacy/mock-rpc"]

[dependencies]
anyhow = { version = "1.0" }
neptune-privacy = { version = "0.2.0", path = "../xnt-core" }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
tarpc = { version = "^0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio = { version = "1.41", features = ["full", "tracing"] }
ratatui = "0.29"
itertools = "0.11"
num-traits = "0.2"
unicode-width = "0.1"
strum = { version = "0.27.0", features = ["derive"] }
bytesize = "1.3"
tasm-lib = { git = "https://github.com/neptuneprivacy/tasm-lib-patch.git", tag = "v1.0.1" }
humantime = "2.1.0"
rand = { version = "0.9.2", optional = true }

[dev-dependencies]

[lints]
workspace = true
