[package]
name = "xnt-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "C-binding library for xnt-core offline signing"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "xnt-ffi-test"
path = "src/bin/xnt-ffi-test.rs"

[dependencies]
neptune-privacy = { path = "../xnt-core" }
libc = "0.2"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.9"
bip39 = { package = "tiny-bip39", version = "1.0" }
sha3 = "0.10"
aes-gcm = "0.10"
aead = "0.5"
num-traits = "0.2"

[build-dependencies]
cbindgen = "0.27"

[lints]
workspace = true
