[package]
name = "xnt-rpc-client"
description = "library for interacting with neptune-privacy's JSON-RPC"
authors = ["Triton Software"]
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "default-tls", "system-proxy"] }
serde_json = "1.0"
neptune-privacy = { version = "0.2.0", path = "../../xnt-core" }
async-trait = "0.1.83"

[dev-dependencies]
tokio = { version = "1.41", features = ["full", "tracing"] }

[lints]
workspace = true
